--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,78 @@
     transform: rotate(360deg);
   }
 }
+
+.page-head{
+  font-family: 'Quicksand', sans-serif;
+
+  font-size: 35px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin-right: 10px;
+  color: #041626;
+}
+p{
+  font-family: 'Quicksand', sans-serif;
+
+  font-size: 25px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-right: 10px;
+  color: #041626;
+}
+
+.login-btn{
+  font-family: 'Quicksand', sans-serif;
+  background: #0099FF;
+  color: #fff;
+  height: 40px;
+  padding: 0px 16px;
+  width: 100%;
+  border: none;
+  border-radius: 12px;
+  padding: 0px 16px;
+  box-shadow: 0px 3px 16px 0px rgba(0,0,0,0.06);
+  font-size: 15px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+}
+.login-btn:hover{
+  background: #2984c2;
+  color: #fff;
+  height: 40px;
+  padding: 0px 16px;
+  width: 100%;
+  border: none;
+  border-radius: 12px;
+  padding: 0px 16px;
+  box-shadow: 0px 3px 16px 0px rgba(0,0,0,0.06);
+  font-size: 15px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+}
+.login-btn:focus{
+  background: #122a3a;
+  color: #fff;
+  height: 40px;
+  padding: 0px 16px;
+  width: 100%;
+  border: none;
+  border-radius: 12px;
+  padding: 0px 16px;
+  box-shadow: 0px 3px 16px 0px rgba(0,0,0,0.06);
+  font-size: 15px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+}
+
+.login-wrapper{
+  width: 500px;
+  margin: 0 auto;
+  margin-top: 18vh;
+}
